--- a/style/style.css
+++ b/style/style.css
@@ -320,6 +320,11 @@ footer {
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     backdrop-filter: blur(10px);
+    transition: all .3s ease-in-out !important;
+}
+.bg-glass:hover {
+    color: #575757 !important;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 .bg-glass-white {
     width: 100%;
